--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 
 * {
   box-sizing: border-box;
+  outline: none;
   padding: 0;
   margin: 0;
 }
@@ -20,4 +21,17 @@ a {
   text-decoration: none;
   user-select: none;
   cursor: pointer;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scroll-bar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scroll-bar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
